--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/mike1994s/nodejsserverdiplom#readme",
   "dependencies": {
+    "body-parser": "^1.15.1",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "fluent-ffmpeg": "^2.1.0",
+    "multer": "^1.1.0",
     "socket.io": "^1.4.6"
   }
 }
