--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.13.0",
     "fluent-ffmpeg": "^2.1.0",
     "multer": "^1.1.0",
-    "socket.io": "^1.4.6"
+    "socket.io": "^1.4.6",
+    "nconf": "~0.8.4"
   }
 }
