--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fluent-ffmpeg": "^2.1.0",
     "multer": "^1.1.0",
     "socket.io": "^1.4.6",
-    "nconf": "~0.8.4"
+    "nconf": "~0.8.4",
+    "bluebird": "~3.4.0"
   }
 }
