--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.1.0",
     "socket.io": "^1.4.6",
     "nconf": "~0.8.4",
-    "bluebird": "~3.4.0"
+    "bluebird": "~3.4.0",
+    "q": "~1.4.1"
   }
 }
