--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "socket.io": "^1.4.6",
     "nconf": "~0.8.4",
     "bluebird": "~3.4.0",
-    "q": "~1.4.1"
+    "q": "~1.4.1",
+    "mocha": "~2.5.3",
+    "should": "~9.0.0",
+    "supertest": "~1.2.0"
   }
 }
