--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "q": "~1.4.1",
     "mocha": "~2.5.3",
     "should": "~9.0.0",
-    "supertest": "~1.2.0"
+    "supertest": "~1.2.0",
+    "connect-busboy": "0.0.2"
   }
 }
