--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mocha": "~2.5.3",
     "should": "~9.0.0",
     "supertest": "~1.2.0",
-    "connect-busboy": "0.0.2"
+    "connect-busboy": "0.0.2",
+    "socket.io-client": "~1.4.6"
   }
 }
