--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "should": "~9.0.0",
     "supertest": "~1.2.0",
     "connect-busboy": "0.0.2",
-    "socket.io-client": "~1.4.6"
+    "socket.io-client": "~1.4.6",
+    "node-gcm": "~0.14.2"
   }
 }
