syncronize with server

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
-    "port": 8090,
+    "port": 3000,
     "mongoose": {
-        "uri": "mongodb://127.0.0.1/app_game",
+        "uri": "mongodb://admin:dkVHES9iVnD8@127.7.182.130:27017/nodejsdiplom",
         "options": {
             "socketOptions": {
                 "keepAlive": 1
