--- a/package.json
+++ b/package.json
@@ -1,38 +1,33 @@
 {
-  "name": "diplom",
-  "version": "1.0.0",
-  "description": "0.0.1",
+  "name": "openshift-cartridge-nodejs-template",
+  "version": "1.0.1",
+  "description": "Custom Node.js cartridge for OpenShift - sample application",
+  "private": true,
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mike1994s/nodejsserverdiplom.git"
-  },
-  "author": "Mike",
+  "author": " ",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mike1994s/nodejsserverdiplom/issues"
-  },
-  "homepage": "https://github.com/mike1994s/nodejsserverdiplom#readme",
   "dependencies": {
+    "bluebird": "~3.4.0",
     "body-parser": "^1.15.1",
+    "connect-busboy": "0.0.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "fluent-ffmpeg": "^2.1.0",
-    "multer": "^1.1.0",
-    "socket.io": "^1.4.6",
-    "nconf": "~0.8.4",
-    "bluebird": "~3.4.0",
-    "q": "~1.4.1",
     "mocha": "~2.5.3",
+    "mongoose": "^4.4.20",
+    "multer": "^1.1.0",
+    "nconf": "~0.8.4",
+    "newman": "^2.0.9",
+    "node-gcm": "~0.14.2",
+    "q": "~1.4.1",
     "should": "~9.0.0",
-    "supertest": "~1.2.0",
-    "connect-busboy": "0.0.2",
+    "socket.io": "^1.4.6",
     "socket.io-client": "~1.4.6",
-    "node-gcm": "~0.14.2"
+    "supertest": "~1.2.0"
   }
 }
